fixing css 'active' tab alignment problem

--- a/public/yaml/navigation/nav_slidingdoor.css
+++ b/public/yaml/navigation/nav_slidingdoor.css
@@ -115,13 +115,4 @@
     padding-top: 5px;
   }
   
-  .hlist li.active a {
-    /* (en) This image is mainly transparent */
-    /* (de) Dieses Bild ist größtenteils transparent */
-    background: transparent url("images/sliding_door/round/right_on.png") no-repeat top right;
-    color: #334;
-    font-weight: bold;
-    padding-bottom: 4px;
-    padding-top: 5px;
-  }
 }
